--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express-fileupload": "^1.1.7-alpha.3",
     "express-session": "^1.17.1",
     "mysql": "^2.18.1",
-    "req-flash": "0.0.3"
+    "req-flash": "0.0.3",
+    "swagger-ui-express": "^4.1.4"
   }
 }
